<resources>
    <string name="app_name">Interimax</string>
    <string name="home">home</string>
    <string name="message">message</string>
    <string name="bookmark">bookmark</string>
    <string name="notification">notification</string>
    <string name="back_icon_description">Back Icon</string>
    <string name="search">Recherche</string>
    <string name="search_hint">Rechercher un job ou une position</string>
    <string name="filter_icon_description">Filter Icon</string>
    <string name="recent_search">Recherches récentes</string>
    <string name="popular">Populaires</string>
    <string name="search_button">Search Button</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom</string>
    <string name="date_of_birth">Date de naissance</string>
    <string name="country">Pays de résidence</string>
    <string name="phone_number">Numéro de téléphone</string>
    <string name="email">Adresse mail</string>
    <string name="password">Mot de passe\n</string>
    <string name="confirm_password">Confirmer le mot de passe</string>
    <string name="register">Créer le compte</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filters">Filtres</string>
    <string name="done">Terminé</string>
    <string name="filter_hint">Employeur</string>
    <string name="salary">Salaire</string>
    <string name="salary_section_desc">La moyenne des salaires choisis est</string>
    <string name="location">Localisation</string>
    <string name="no_location">Aucune localisation</string>
    <string name="delete">Supprimer</string>
    <string name="icon">icon</string>
    <string name="job_found">Offres trouvées</string>
    <string name="one_job_found">Offre trouvée</string>
    <string name="no_job_found">Aucune offres trouvées</string>
    <plurals name="job_found">
        <item quantity="one">%d job found</item>
        <item quantity="other">%d jobs found</item>
    </plurals>
    <string name="back_arrow_desc">back arrow</string>
    <string name="offer_icon">offer_icon</string>
    <string name="description_title">Description</string>
    <string name="candidate">Postuler</string>
    <string name="title_activity_messages">MessagesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="add_message">Nouveau message</string>
    <string name="apply">Postuler</string>
    <string name="choose_a_resume">Choisir un CV</string>
    <string name="suivre_les_candidatures">Suivre les candidatures</string>
    <string name="succes">Réussite</string>
    <string name="success_text">Vous venez de postuler à</string>
    <string name="find_more_offer">Chercher plus d’offres</string>
    <string name="upload_icon">upload icon</string>
    <string name="no_resume_selected">Aucun CV selectionné</string>
    <string name="motivation_letter">Lettre de motivation</string>
    <string name="optional">(Optionnelle)</string>
    <string name="applications_title">Candidatures</string>
    <string name="applications_count">Candidatures actives:</string>
    <string name="nav_header_name">Anonyme</string>
    <string name="nav_header_role">Inconnu</string>
    <string name="modify">Modifier</string>
    <string name="applications">Candidatures</string>
    <string name="all">Tout</string>
    <string name="selection">Sélectionné</string>
    <string name="refuse">Refusé</string>
    <string name="waiting">En attente</string>
    <string name="accept_question">Accepter ?</string>
    <string name="accept">Accepter</string>
    <string name="decline">Refuser</string>
    <string name="accepted">Accepté</string>
    <string name="declined_by_you">Refusé par vous</string>
    <string name="my_offers">Mes Offres</string>
</resources>