<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ApplicationsActivity">
    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/cross_icon"
        android:contentDescription="@string/back_icon_description"
        android:layout_alignParentStart="true"
        android:background="@color/transparent"/>
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/applications"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:padding="24dp"
        android:textSize="30sp"
        android:textStyle="bold" />
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/total"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginHorizontal="12dp">
        <RadioButton
            android:id="@+id/all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:button="@null"
            android:checked="true"
            android:background="@drawable/radio_selector"
            android:text="@string/all"
            android:textColor="@color/radio"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginHorizontal="12dp"/>
        <RadioButton
            android:id="@+id/selection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:button="@null"
            android:background="@drawable/radio_selector"
            android:text="@string/selection"
            android:textColor="@color/radio"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginHorizontal="12dp"/>
        <RadioButton
            android:id="@+id/refuse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:button="@null"
            android:background="@drawable/radio_selector"
            android:text="@string/refuse"
            android:textColor="@color/radio"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginHorizontal="12dp"/>
    </RadioGroup>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/radio_group" />
</RelativeLayout>