<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    tools:context=".CandidateActivity">
    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/cross_icon"
        android:contentDescription="@string/back_icon_description"
        android:layout_alignParentStart="true"
        android:background="@color/transparent"/>
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="20dp"/>
    <include
        layout="@layout/offer_list_element"
        android:id="@+id/offer_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="36dp"/>
    <LinearLayout
        android:id="@+id/resume_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/offer_info"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_a_resume"
            android:textStyle="bold"
            android:textSize="24sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            android:gravity="center_vertical"
            android:layout_marginTop="12dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:background="@drawable/purple_rounded"
                android:backgroundTint="#33390A6E"
                android:layout_marginEnd="24dp">
                <ImageView
                    android:id="@+id/valid_cv"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_margin="12dp"
                    android:src="@drawable/validated_icon"
                    android:visibility="invisible"/>
                <TextView
                    android:id="@+id/cv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="48dp"
                    android:text="@string/no_resume_selected" />
            </LinearLayout>
            <ImageButton
                android:id="@+id/cv_upload_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/upload_icon"
                android:src="@drawable/upload_icon"
                android:background="@drawable/purple_rounded"
                android:backgroundTint="#33390A6E"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/resume_layout"
        android:orientation="vertical"
        android:layout_marginTop="12dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/motivation_letter"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginEnd="4sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optional"
                android:textColor="@color/grey"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            android:layout_marginTop="12dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="@drawable/purple_rounded"
                android:backgroundTint="#33390A6E"
                android:layout_marginEnd="24dp">
                <ImageView
                    android:id="@+id/valid_ml"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_margin="12dp"
                    android:src="@drawable/validated_icon"
                    android:visibility="invisible"/>
                <TextView
                    android:id="@+id/ml_name"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="48dp"
                    android:layout_marginVertical="12dp"
                    android:text="Aucune lettre de motivation selectionnée" />
            </LinearLayout>
            <ImageButton
                android:id="@+id/motivation_letter_upload"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/upload_icon"
                android:src="@drawable/upload_icon"
                android:background="@drawable/purple_rounded"
                android:backgroundTint="#33390A6E"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/candidate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/candidate"
        android:background="@drawable/purple_rounded"
        android:layout_margin="24dp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>