<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FilterFragment"
    android:padding="30dp">
    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/cross_icon"
            android:contentDescription="@string/back_icon_description"
            android:background="@color/transparent"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filters"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_centerInParent="true"/>
        <Button
            android:id="@+id/finish_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/done"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/employer_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_layout"
        android:layout_marginTop="50dp"
        android:background="@drawable/border_grey"
        android:gravity="center_vertical">
        <ImageButton
            android:id="@+id/filter_employer_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:src="@drawable/search_loop_icon"
            android:background="@color/transparent"
            android:contentDescription="@string/search_button" />
        <EditText
            android:id="@+id/filter_employer_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:paddingStart="0dp"
            android:hint="@string/filter_hint"
            android:autofillHints=""
            android:inputType="text"
            android:background="@color/transparent"/>
    </LinearLayout>
    <TextView
        android:id="@+id/no_employer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/employer_input_layout"
        android:paddingVertical="48dp"
        android:background="@drawable/bottom_border"
        android:text="Aucun employeur sélectionné."
        android:textSize="18sp"
        android:textColor="@color/grey"/>
    <HorizontalScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:layout_below="@id/employer_input_layout"
        android:visibility="invisible">
        <LinearLayout
            android:id="@+id/selected_buttons"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingVertical="48dp"
            android:background="@drawable/bottom_border"/>
    </HorizontalScrollView>
    <TextView
        android:id="@+id/salary_section_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salary"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/grey"
        android:layout_below="@id/scrollView"
        android:layout_marginTop="42dp"/>
    <TextView
        android:id="@+id/salary_section_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salary_section_desc"
        android:textSize="18sp"
        android:textColor="@color/grey"
        android:layout_below="@id/salary_section_title"
        android:layout_marginTop="6dp"/>
    <TextView
        android:id="@+id/average_salary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_toEndOf="@id/salary_section_desc"
        android:layout_below="@id/salary_section_title"
        android:layout_marginTop="6dp"
        android:layout_marginStart="6dp"/>
    <LinearLayout
        android:id="@+id/salary_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_border"
        android:orientation="vertical"
        android:layout_below="@id/salary_section_desc">
        <RelativeLayout
            android:id="@+id/salary_result_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="14dp"
            android:paddingHorizontal="18dp">
            <TextView
                android:id="@+id/salary_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:textStyle="bold"
                android:textSize="26sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/salary_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:textStyle="bold"
                android:textSize="26sp"
                android:textColor="@color/black"/>
        </RelativeLayout>
        <com.google.android.material.slider.RangeSlider
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:valueFrom="5"
            android:valueTo="75"
            app:values="@array/initial_range_slider_values"
            android:layout_below="@id/salary_result_layout"
            android:layout_marginBottom="48dp"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/location_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/salary_layout"
        android:background="@drawable/bottom_border"
        android:layout_marginBottom="60dp">
        <TextView
            android:id="@+id/location_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="18sp"
            android:textColor="@color/grey"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/locations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:paddingHorizontal="48dp"
            android:paddingVertical="24dp"
            android:text="@string/no_location"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/location_tv"
            android:layout_toStartOf="@id/location_btn"/>
        <ImageView
            android:id="@+id/location_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/location"
            android:src="@drawable/location_edit_icon"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>
</RelativeLayout>